@@ -1,3 +1,8 @@
+2007-10-04  Jonh Wendell <jwendell@gnome.org>
+
+	* src/vinagre-tab.c:
+	  - Added bell support.
+
 2007-10-03  Jonh Wendell <jwendell@gnome.org>
 
 	* src/vinagre-tab.c,
